syntax = "proto3";

option go_package = "proto/equipment";
import "google/protobuf/empty.proto";

service EquipmentService {
    rpc CreateEquipment(EquipmentCreateDto) returns (EquipmentResponseDto) {}
    rpc GetAll(google.protobuf.Empty) returns (EquipmentListResponse) {}
}

message EquipmentCreateDto{
    string Name=1;
    string Description=2;
}


message  EquipmentResponseDto{
    int64 Id=1;
    string Name=2;
    string Description=3;
}


message EquipmentListResponse{
    repeated EquipmentResponseDto equipmentResponses =1;
}

message GetEquipmentParams{
    string id=1;
}