syntax = "proto3";

option go_package = "proto/preference";

service PreferenceService {
    rpc CreatePreference(PreferenceCreateDto) returns (PreferenceResponseDto) {}
    rpc GetByTouristId(GetPreferenceParams) returns (PreferenceResponseDto) {}
}

message PreferenceCreateDto{
    int64 UserId=1;
    int32 DifficultyLevel=2;
    int32 WalkingRating=3;
    int32 CyclingRating=4;
    int32 CarRating=5;
    int32 BoatRating=6;
    repeated string SelectedTags=7;
}


message  PreferenceResponseDto{
    int64 Id=1;
    int64 UserId=2;
    int32 DifficultyLevel=3;
    int32 WalkingRating=4;
    int32 CyclingRating=5;
    int32 CarRating=6;
    int32 BoatRating=7;
    repeated string SelectedTags=8;
}


message PreferenceListResponse{
    repeated PreferenceResponseDto preferenceResponses =1;
}

message GetPreferenceParams{
    string id=1;
}