syntax = "proto3";

option go_package = "proto/publicFacilityRequest";

import "google/protobuf/empty.proto";


service PublicFacilityRequestService {
    rpc CreateFacilityRequest(PublicFacilityRequestCreateDtoF) returns (PublicFacilityRequestResponseDtoF) {}
    rpc GetAllFacilityRequest(google.protobuf.Empty) returns (PublicFacilityRequestListResponseF) {}
}

message PublicFacilityRequestCreateDtoF{
    int64 Id=1;
     int64 AuthorId=2;
 int64 FacilityId=3;
 enum PublicStatus {
        Pending=0;
    Accepted=1;
    Rejected=2;
    };
   PublicStatus Status=4;
 
 int64 Created=5;
 string AuthorName=6;
 string AuthorPicture=7;
}


message  PublicFacilityRequestResponseDtoF{
    int64 Id=1;
 int64 FacilityId=2;
 enum PublicStatus {
        Pending=0;
    Accepted=1;
    Rejected=2;
    };
   PublicStatus Status=3;
   string Comment=4;
 
 int64 Created=5;
 string AuthorName=6;
 string FacilityName=7;
 UserResponseDtoF Author=8;
}

message UserResponseDtoF{
     int64 Id =1;
        string Username =2;
        string ProfilePicture =3;
        int32 Role=4;
       bool IsActive=5;
        repeated FollowerCreateDtoF Followers = 6;
}

message FollowerCreateDtoF{
    int64 UserId=1;
    int64 FollowedById=2;
}

message PublicFacilityRequestListResponseF{
    repeated PublicFacilityRequestResponseDtoF publicFacilityRequestsResponses =1;
}

message GetRequestParamsF{
    string id=1;
}